--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -33,7 +33,7 @@ ext.isRunTask = { tasks ->
         for(item in tasks) {
             logger.debug("${item} ${executingTasks}")
             for (execTask in executingTasks) {
-                if (execTask.contains(item)) {
+                if (execTask.endsWith(item)) {
                     return true
                 }
             }
@@ -59,6 +59,11 @@ ext.isNativeTask = {
 }
 
 
+ext.isTestTask = { env ->
+    return isRunTask(['test'])
+}
+
+
 ext.isRunUnitTest = {
 //    def executeDockerBuild = false
 //    def executingTasks = project.gradle.startParameter.taskNames
@@ -75,17 +80,21 @@ ext.isDev = {
     return !isProd(env) && !isTest(env)
 }
 
-
-ext.ignoredEnv = false
-def executingTasks = project.gradle.startParameter.taskNames
-if (executingTasks == null || executingTasks.isEmpty()
-        || 'classes' in executingTasks
-        || 'compileJava' in executingTasks) {
-    ignoredEnv = true
+ext.ignoredEnv = {
+    return isRunTask(['classes', 'compileJava', 'test'])
 }
 
+//ext.ignoredEnv = false
+//def executingTasks = project.gradle.startParameter.taskNames
+//if (executingTasks == null || executingTasks.isEmpty()
+//        || 'classes' in executingTasks
+//        || 'compileJava' in executingTasks
+//) {
+//    ignoredEnv = true
+//}
+
 ext.isStartupFromCode = {
-    return isRunTask(['bootRun', ':bootRun'])
+    return isRunTask(['bootRun'])
 }
 
 ext.isStartupFromDocker = {
@@ -100,5 +109,5 @@ ext.isStartupFromDocker = {
 //    }
 //}
 
-println "Executing ${project.gradle.startParameter.taskNames}, ignoredEnv $ignoredEnv"
+println "Executing ${project.gradle.startParameter.taskNames}, ignoredEnv ${ignoredEnv()}"
 
