--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -43,15 +43,14 @@ ext.isRunTask = { tasks ->
 }
 
 ext.isDockerBuild = {
-//    def executeDockerBuild = false
-//    def executingTasks = project.gradle.startParameter.taskNames
-//    if (executingTasks != null && !executingTasks.isEmpty()) {
-//        executeDockerBuild = 'jib' in executingTasks
-//                || 'jibDockerbuild' in executingTasks
-//    }
-//    return executeDockerBuild
     return isRunTask(['jib', 'jibDockerbuild'])
 }
+
+
+ext.isJibDockerBuild = {
+    return isRunTask(['jib', 'jibDockerbuild'])
+}
+
 
 //processAot
 ext.isNativeTask = {
@@ -72,7 +71,7 @@ ext.isRunUnitTest = {
 //                || 'jibDockerbuild' in executingTasks
 //    }
 //    return executeDockerBuild
-    return isRunTask(['test', ':test'])
+    return isRunTask(['test'])
 }
 
 
@@ -92,6 +91,12 @@ ext.ignoredEnv = {
 //) {
 //    ignoredEnv = true
 //}
+
+
+ext.isStartupOrPackage = {
+    return isRunTask(['bootRun', 'jib', 'jibDockerbuild'])
+}
+
 
 ext.isStartupFromCode = {
     return isRunTask(['bootRun'])
