--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -6,25 +6,30 @@ dependencies {
 
     implementation group: 'com.google.guava', name: 'guava', version: '25.1-jre'
 //    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
-    compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
 //    implementation group: 'org.jetbrains', name: 'annotations', version: '13.0'
 //    implementation group: 'jakarta.inject', name: 'jakarta.inject', version: '1'
 
 // https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api
-    implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
+//    implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
+
+
+//    compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
+    compileOnly(FlycatLibVersion.slf4j_api)
+
+    implementation(FlycatLibVersion.jakarta_inject_api)
 
 //    implementation group: 'javax.annotation', name: 'javax.annotation-api ', version: '1.3.2'
 
-    implementation 'org.javassist:javassist:3.21.0-GA'
-    implementation 'org.reflections:reflections:0.9.9-RC2'
+//    implementation 'org.javassist:javassist:3.21.0-GA'
+//    implementation 'org.reflections:reflections:0.9.9-RC2'
 
 
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+//    implementation 'com.google.code.findbugs:jsr305:3.0.2'
     // vendor
 // https://mvnrepository.com/artifact/org.apache.commons/commons-text
 //    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.6'
 
-    testImplementation 'junit:junit:4.12'
+//    testImplementation 'junit:junit:4.12'
 }
 
 targetCompatibility = vJavaLang
