--- a/flycat-spi/build.gradle
+++ b/flycat-spi/build.gradle
@@ -2,6 +2,6 @@ dependencies {
     implementation project(':flycat-context')
     implementation project(':flycat-util')
 
-    implementation group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.0'
+//    implementation group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.0'
     compileOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
