--- a/flycat-springboot/flycat-mybatis/build.gradle
+++ b/flycat-springboot/flycat-mybatis/build.gradle
@@ -8,14 +8,15 @@ dependencies {
 //    implementation group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
 //    implementation group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
 
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
+//    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
+     implementation(FlycatLibVersion.mysql_driver)
 //    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.48'
 //    implementation group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.1.2'
     // https://mvnrepository.com/artifact/p6spy/p6spy
 //    implementation group: 'p6spy', name: 'p6spy', version: '3.8.5'
 
 //    implementation group: 'com.baomidou', name: 'mybatis-plus', version: '3.2.0'
-    implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2")
+    implementation(FlycatLibVersion.mybatis_starter)
 }
 
 
