--- a/flycat-web/build.gradle
+++ b/flycat-web/build.gradle
@@ -5,9 +5,9 @@ dependencies {
     implementation project(':flycat-util')
 //    implementation group: 'jakarta.validation', name: 'validation-implementation ', version: '2.0.1.Final'
     // https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
-    compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '5.0.0'
+    compileOnly(FlycatLibVersion.jakarta_servlet_api)
 
-    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
+    implementation(FlycatLibVersion.jakarta_validation_api)
 
 //    implementation 'jakarta.servlet:jakarta.servlet-api:3.1.0'
 }
