--- a/flycat-datasource/flycat-ds/build.gradle
+++ b/flycat-datasource/flycat-ds/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
     implementation project(':flycat-context')
-//    implementation group: 'jakarta.validation', name: 'validation-implementation ', version: '2.0.1.Final'
+//    implementation group: 'javax.validation', name: 'validation-implementation ', version: '2.0.1.Final'
 }
 
 
