--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -43,12 +43,13 @@ ext.isRunTask = { tasks ->
 }
 
 ext.isDockerBuild = {
-    return isRunTask(['jib', 'jibDockerbuild'])
+//    return isRunTask(['jib', 'jibDockerBuild', 'buildLocalImages'])
+    return isJibDockerBuild()
 }
 
 
 ext.isJibDockerBuild = {
-    return isRunTask(['jib', 'jibDockerbuild'])
+    return isRunTask(['jib', 'jibDockerBuild', 'buildLocalImages'])
 }
 
 
@@ -68,7 +69,7 @@ ext.isRunUnitTest = {
 //    def executingTasks = project.gradle.startParameter.taskNames
 //    if (executingTasks != null && !executingTasks.isEmpty()) {
 //        executeDockerBuild = 'jib' in executingTasks
-//                || 'jibDockerbuild' in executingTasks
+//                || 'jibDockerBuild' in executingTasks
 //    }
 //    return executeDockerBuild
     return isRunTask(['test'])
@@ -94,7 +95,8 @@ ext.ignoredEnv = {
 
 
 ext.isStartupOrPackage = {
-    return isRunTask(['bootRun', 'jib', 'jibDockerbuild'])
+//    return isRunTask(['bootRun', 'jib', 'jibDockerBuild','buildLocalImages'])
+    return isRunTask(['bootRun']) || isDockerBuild()
 }
 
 
@@ -108,11 +110,25 @@ ext.isStartupFromDocker = {
 
 //if (executingTasks == null || executingTasks.isEmpty()
 //        || 'jib' in executingTasks
-//        || 'jibDockerbuild' in executingTasks) {
+//        || 'jibDockerBuild' in executingTasks) {
 //    if (!hasProperty("deployType")) {
 //        throw new java.lang.RuntimeException("Need deployType arguments")
 //    }
 //}
+
+if (!hasProperty("profile")) {
+    if (isDockerBuild()) {
+        ext.profile = "docker" + env
+    } else {
+//        println("Check ${isNativeTask()}")
+        if (isNativeTask()) {
+            ext.profile = "native" + env
+        } else {
+            ext.profile = env
+        }
+    }
+}
+logger.info("Use ${profile} profile")
 
 println "Executing ${project.gradle.startParameter.taskNames}, ignoredEnv ${ignoredEnv()}"
 
