--- a/config/gradle/dockerProject.gradle
+++ b/config/gradle/dockerProject.gradle
@@ -29,13 +29,13 @@ if (hasProperty("platform")) {
     ext.jibPlatform = "$platform"
 }
 
-def dockerImage = 'ibm-semeru-runtimes:open-17-jre-jammy'
+def dockerBaseImage = 'ibm-semeru-runtimes:open-17-jre-jammy'
 def tag = "default"
 if (hasProperty("dockerBaseImage")) {
-    dockerImage = ext.dockerBaseImage
+    dockerBaseImage = ext.dockerBaseImage
     tag = "config"
 }
-println("Using ${dockerImage} image by ${tag}")
+println("Using ${dockerBaseImage} image by ${tag}")
 
 jib {
     from {
@@ -43,7 +43,7 @@ jib {
 //        image = 'https://reg.qiniu.com/open-flycat/flycat:latest'
 //        image = 'https://reg.qiniu.com/open-flycat/flycat-openj9:latest'
 //        image = 'zgqq/flycat-jdk17:latest'
-        image = dockerImage
+        image = dockerBaseImage
         platforms {
             if (jibPlatform == "linux/amd64") {
                 println("Using docker platform, linux/amd64, specific platform: $jibPlatform")
