--- a/config/gradle/versionManagement.gradle
+++ b/config/gradle/versionManagement.gradle
@@ -1,4 +1,3 @@
-
 //3.0
 //class FlycatLib {
 //    static String mybatis_starter = 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
@@ -21,9 +20,14 @@ class FlycatLib {
     public static String spring_management_version = '1.1.0'
 
     public static String mybatis_starter = 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
-    public static String mybatis_plus_starter =  'com.baomidou:mybatis-plus-boot-starter:3.1.2'
+    public static String mybatis_plus_starter = 'com.baomidou:mybatis-plus-boot-starter:3.1.2'
     public static String mysql_driver = 'mysql:mysql-connector-java:8.0.30'
-    public static String slf4j_api= 'org.slf4j:slf4j-api:1.7.36'
+    public static String slf4j_api = 'org.slf4j:slf4j-api:1.7.36'
+    public static String jackson_databind_version = "2.13.4.2"
+    public static String jackson_core_version = "2.13.4"
+
+    public static String jackson_databind = 'com.fasterxml.jackson.core:jackson-databind:' + jackson_databind_version
+    public static String jackson_core = 'com.fasterxml.jackson.core:jackson-core:'+jackson_core_version
 
     // spring boot 2.x
     public static String hibernate_validator = 'org.hibernate.validator:hibernate-validator:6.0.18.Final'
@@ -36,4 +40,5 @@ class FlycatLib {
     public static String spring_boot_admin_server = 'de.codecentric:spring-boot-admin-starter-server:2.7.7'
 
 }
+
 ext.FlycatLibVersion = FlycatLib
