--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -49,7 +49,7 @@ ext.isDockerBuild = {
 
 
 ext.isJibDockerBuild = {
-    return isRunTask(['jib', 'jibDockerBuild', 'buildLocalImages'])
+    return isRunTask(['jib', 'jibDockerBuild', 'buildLocalImage', 'buildLocalImages'])
 }
 
 
